配置文件打包移动到